<resources>
    <string name="app_name">Blood Bucket</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="logout">Log out</string>
    <string name="contact_us">Contact us</string>
    <string name="blood_info">Blood Information</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_up">Create an account</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset">Reset Password</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="displayName">Full Name</string>
    <string name="gender">Gender</string>
    <string name="mobile">Mobile No</string>
    <string name="user_address">Address</string>
    <string name="find_donor">Find Donors</string>
    <string name="bookAppt">Book Appointment</string>
    <string name="aboutUs">About Us</string>
    <string name="contactUs">Contact Us</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="appointment_date">Appointment Date</string>
    <string name="appointment_time">Appointment Time</string>

    <string name="question1">1. Currently taking any antibiotic?</string>
    <string name="question2">2. Suffering from any disease/illness?</string>
    <string name="question3">3. Did you donate blood in last 3 months?</string>
    <string name="question4">4. Had any vaccinations or other shots?</string>
    <string name="question5">5. Had a tatoo?</string>
    <string name="question6">6. Had a transplant such as organ,tissue or bone marrow?</string>
    <string name="question7">7. Did you undergo any major surgeries within last 6 months?</string>
    <string name="question8">8. Did blood transfusion within last 6 months?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>



    <array name="gender">
        <item>Male</item>
        <item>Female</item>
    </array>

    <array name="blood_group">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </array>

    <string-array name="division_list">
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kentucky</item>
        <item>Michigan</item>
        <item>Missouri</item>
        <item>Wisconsin</item>
    </string-array>

    <string-array name="appt_status_list">
        <item>Pending</item>
        <item>Approved</item>
        <item>Rejected</item>
        <item>Cancelled</item>
    </string-array>

    <string name="admin_email">admin@gmail.com</string>
    <string name="title_activity_maps">Map</string>

</resources>
