<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:checked="true"/>
    <item
        android:id="@+id/userprofile"
        android:title="@string/profile" />
    <item
        android:id="@+id/bookAppt"
        android:title="@string/bookAppt" />
    <item
        android:id="@+id/questionnaire"
        android:title="Fill Questionnaire"/>
    <item
        android:id="@+id/find_donor"
        android:title="@string/find_donor" />
    <item
        android:id="@+id/aboutUs"
        android:title="@string/aboutUs" />
    <item
        android:id="@+id/contactUs"
        android:title="@string/contactUs" />
    <item
        android:id="@+id/logout"
        android:title="@string/logout" />
</menu>