<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="50dp"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:hint="@string/prompt_email" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:gravity="center"
            android:inputType="textPassword" />

        <Button
            android:textAllCaps="false"
            android:id="@+id/button_login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/sign_in"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"/>

        <Button
            android:textAllCaps="false"
            android:id="@+id/button_register"
            android:layout_width="150dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/register"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"/>

        <Button
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:id="@+id/button_forgot_password"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/forgot_password"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

</ScrollView>